# prmpt-hstry

./: .gitignore  .npmignore  CONTRIBUTING.md  EXAMPLE.md  LICENSE  QUICKSTART.md  README.md  cli.js  index.js  package-lock.json  package.json  vercel.json
.cursor/rules/: repo-hygiene.mdc
cursor-habits/: README.md  cursor_habits.py  requirements.txt
cursorhabits/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cursorhabits/src/cursorhabits/: __init__.py  analyzer.py  apply.py  cli.py  extractor.py  filters.py  output.py  synthesizer.py
cursorhabits/tests/: __init__.py  test_filters.py
nextjs-app/: FRONTEND_REDESIGN.md  package-lock.json  package.json
nextjs-app/src/: middleware.ts
nextjs-app/src/app/: globals.css  layout.tsx  page.tsx
nextjs-app/src/app/about/: page.tsx
nextjs-app/src/app/auth/: page.tsx
nextjs-app/src/app/dashboard/: page.tsx
nextjs-app/src/app/export/: page.tsx
nextjs-app/src/app/privacy/: page.tsx
nextjs-app/src/app/showcase/[id]/: page.tsx
nextjs-app/src/app/showcases/: page.tsx
nextjs-app/src/app/terms/: page.tsx
nextjs-app/src/components/: Footer.tsx  Header.tsx  InstallCommand.tsx  PromptCard.tsx  ShowcaseCard.tsx  TerminalMockup.tsx
nextjs-app/src/lib/supabase/: middleware.ts
